# drl-ord

./: .gitignore  DRL_ORD.ipynb  README.md  arch.md
epd-kit/: pyproject.toml
epd-kit/database/: convergence_demo.pkl  convergence_demo_a2c_broken.pkl  convergence_demo_mini.pkl  ex_signals_10.pkl  ex_signals_15.pkl  final_resdict4_comparing_3_models.pkl  resdict2_comparing_3_models.pkl
epd-kit/draft_notebooks/: comparing_3smaler_models.ipynb  old_classes.py  refactor_THIS_final_cv_exp_results.ipynb  sanity_checks.ipynb  test_only_mag_n_freq.ipynb  training_convergence.ipynb
epd-kit/epd_kit/: ds_build.ipynb  training_and_testing.ipynb
epd-kit/matlab_sim_sourcecode/: gen_exp_db.m  gen_signals.m  gen_signals_db.asv  gen_signals_db.m  reward_shaping.m  rlord_gen_log_states.m  rlord_gen_log_states_exp.m  viz_saved_states.asv  viz_saved_states.m
