[tool.poetry]
name = "epd-kit"
version = "0.1.0"
description = ""
authors = ["Alexandre-Caldeira <alexandre.caldeira@ufv.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
mlflow = "^2.14.1"
optuna = "^3.6.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
tensorboard = "^2.17.0"
ipympl = "^0.9.4"
mat73 = "^0.63"
gym = "^0.26.2"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
